<resources>
    <string name="app_name">Calc</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonPercent">%</string>
    <string name="buttonPoint">.</string>
    <string name="buttonEqually">=</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonX">x</string>
    <string name="buttonSplit">/</string>
    <string name="buttonBack">←</string>
    <string name="buttonC">C</string>
    <string name="buttonBrackets">()</string>
    <string name="settings">Settings</string>
    <string name="white_theme">White theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="classic_theme">Classic theme</string>
    <string name="back_to_main_button">back</string>

</resources>