<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableRow
        android:weightSum="4.1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonC"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonC"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSplit"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonSplit"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
             />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonX"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonX"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonBack"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="1">
        <com.google.android.material.button.MaterialButton
            style="@style/HorizontalLine"
            app:cornerRadius="0dp"
            />
     </TableRow>

    <TableRow
        android:weightSum="4.1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSeven"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button7"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEight"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button8"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNine"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button9"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonMinus"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="1">
        <com.google.android.material.button.MaterialButton
            style="@style/HorizontalLine"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="4.1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFour"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button4"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFive"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button5"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
             />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSix"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button6"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonPlus"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="1">
        <com.google.android.material.button.MaterialButton
            style="@style/HorizontalLine"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="4.1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOne"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button1"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTwo"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button2"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
        />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonThree"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button3"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton

            android:id="@+id/buttonPercent"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbol"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonPercent"
            android:textColor="@color/buttonSymbolText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="1">
        <com.google.android.material.button.MaterialButton
            style="@style/HorizontalLine"
            app:cornerRadius="0dp"
            />
    </TableRow>

    <TableRow
        android:weightSum="4.1">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBrackets"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonBrackets"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonZero"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button0"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPoint"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonNumber"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonPoint"
            android:textColor="@color/buttonNumberText"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            />
        <com.google.android.material.button.MaterialButton
            style="@style/VerticalLine"
            app:cornerRadius="0dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEqually"
            style="@style/ButtonFormsNS"
            android:backgroundTint="@color/buttonSymbolText"
            android:fontFamily="sans-serif-thin"
            android:text="@string/buttonEqually"
            android:textColor="@color/buttonNumber"
            android:textSize="@dimen/key_text_size"
            app:cornerRadius="0dp"
            app:elevation="2dp" />
    </TableRow>
</TableLayout>