<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="515dp">

    <Button
        android:id="@+id/VerticalLine1"
        android:layout_width="1dp"
        android:layout_height="515dp"
        android:layout_marginStart="102dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/VerticalLine2"
        android:layout_width="1dp"
        android:layout_height="515dp"
        android:layout_marginStart="205dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/VerticalLine3"
        android:layout_width="1dp"
        android:layout_height="515dp"
        android:layout_marginStart="308dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/HorizontalLine1"
        android:layout_width="412dp"
        android:layout_height="1dp"
        android:layout_marginTop="102dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VerticalLine2" />

    <Button
        android:id="@+id/HorizontalLine2"
        android:layout_width="412dp"
        android:layout_height="1dp"
        android:layout_marginTop="205dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VerticalLine2" />

    <Button
        android:id="@+id/HorizontalLine3"
        android:layout_width="412dp"
        android:layout_height="1dp"
        android:layout_marginTop="308dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VerticalLine2" />

    <Button
        android:id="@+id/HorizontalLine4"
        android:layout_width="306dp"
        android:layout_height="1dp"
        android:layout_marginTop="411dp"
        android:background="@color/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonSplit" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonC"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSplit"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonSplit"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonX"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonX"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonSplit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonBack"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonX"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonMinus"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonSymbol"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonPlus"
        android:textColor="@color/orangeColor"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonEqually"
        android:layout_width="102dp"
        android:layout_height="205dp"
        android:layout_marginTop="1dp"
        android:background="@color/orangeColor"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonEqually"
        android:textColor="@color/buttonNumber"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button9"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonX" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button8"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonSplit" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button7"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonC" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button6"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button5"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button4"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button3"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button2"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button1"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonPoint"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonZero"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/button0"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="1dp"
        android:background="@color/buttonNumber"
        android:fontFamily="sans-serif-thin"
        android:text="@string/buttonPercent"
        android:textSize="@dimen/key_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

</androidx.constraintlayout.widget.ConstraintLayout>