<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundColor"
    tools:context=".SettingsActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/ActionScreenText"
        android:text="@string/settings"
        android:textSize="@dimen/settings_key_size"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/HorizontalLine"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:ems="14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/settings_screen_text"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/classic_theme"
        app:layout_constraintEnd_toStartOf="@+id/radioButtons"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioClassic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/materialRadioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        style="@style/settings_screen_text"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/white_theme"
        app:layout_constraintEnd_toStartOf="@+id/radioButtons"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/settings_screen_text"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dark_theme"
        app:layout_constraintEnd_toStartOf="@+id/radioButtons"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back_to_main_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>